[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "raise ValueError",
    "raise TypeError",
    "if __name__ == .__main__.:"
]

[tool.poetry]
authors = ["<you>"]
description = "<your-description>"
license = "Apache-2.0"
name = "instructions-nerner"
readme = "README.md"
repository = "<your-repository>"
version = "0.1.0"

[tool.poetry.dependencies]
hydra-colorlog = "^1.2.0"
hydra-core = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
python = "~3.9"
pytorch-lightning = "^1.7.1"
rich = "^12.5.1" # beautiful text formatting in terminal
torch = "^1.10.0"
wandb = "^0.13.1"
pyrootutils = "^1.0.4"
sh = "^1.14.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = "--cov= --cov-report term-missing:skip-covered"
